--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#"><b>CELULAR:</b> 973296379 </a></li>
       </ul>
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link 2</a></li>
+        <li><a href=""><< REGRESAR INICIO</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -36,7 +36,7 @@
 
 
         <div class="row">
-            <div class="col s12">
+            <div class="col s12" style="margin-bottom: 20px;">
               <ul class="tabs">
                 <li class="tab col s3"><a class="active" href="#test1">PARA CUMPLEAÑOS</a></li>
                 <li class="tab col s3"><a href="#test2">GALLETAS</a></li>
