feat: change size title

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   border-bottom: 7px solid  crimson;"
   >
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo" style="color: black !important; font-weight: 600; padding-top: 0px; margin: -5px;">
-        <i class="material-icons" style="font-size: 40px;">mood</i>
+      <a id="logo-container" href="#" class="brand-logo" style="color: black !important; font-weight: 600; padding-top: 0px; margin: -5px; font-size: 28px !important;">
+        <i class="material-icons" style="font-size: 34px;">mood</i>
         MR. DULCES
     </a>
       <ul class="right hide-on-med-and-down">
