--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   border-bottom: 7px solid  crimson;"
   >
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo" style="color: black !important; font-weight: 600; padding-top: 0px; margin: -5px; font-size: 28px !important;">
-        <i class="material-icons" style="font-size: 34px;">mood</i>
-        MR. DULCES
+      <a id="logo-container" href="#" class="brand-logo" style="color: black !important; font-weight: 600; padding-top: 0px; margin: -5px; font-size: 27px !important;">
+        <i class="material-icons" style="font-size: 32px;">mood</i>
+        MR. DULCE
     </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#"><b>CELULAR:</b> 973296379 </a></li>
